# api/client.v1.swagger.yml
@@ -40,20 +40,33 @@ components:
   parameters:
     XRequestIDHeader:
       in: header
-      name: 'X-Request-ID'
+      name: X-Request-ID
       schema:
-        $ref: "#/components/schemas/RequestID"
+        type: string
+        format: uuid
+        x-go-type: types.RequestID
+        x-go-import:
+          path: "github.com/karasunokami/chat-service/internal/types"
       required: true
 
   schemas:
+    # Common.
 
-    RequestID:
-      type: string
-      format: uuid
-      x-go-type: types.RequestID
-      x-go-type-import:
-        path: github.com/karasunokami/chat-service/internal/types
+    Error:
+      required: [ message, code ]
+      properties:
+        code:
+          $ref: "#/components/schemas/ErrorCode"
+        message:
+          type: string
+        details:
+          type: string
 
+    ErrorCode:
+      type: integer
+      description: contains HTTP error codes and specific business logic error codes (the last must be >= 1000).
+      # TODO: Конкретные коды появятся в следующем уроке.
+      minimum: 400
 
     # /getHistory
 
@@ -71,6 +84,8 @@ components:
       properties:
         data:
           $ref: "#/components/schemas/MessagesPage"
+        error:
+          $ref: "#/components/schemas/Error"
 
     MessagesPage:
       required: [ messages ]
@@ -81,7 +96,7 @@ components:
             $ref: '#/components/schemas/Message'
 
     Message:
-      required: [ id, authorId, body, createdAt ]
+      required: [ id, body, createdAt, isReceived, isBlocked, isService ]
       properties:
         id:
           type: string
@@ -98,7 +113,12 @@ components:
         body:
           type: string
           maxLength: 3000
-
         createdAt:
           type: string
           format: date-time
+        isReceived:
+          type: boolean
+        isBlocked:
+          type: boolean
+        isService:
+          type: boolean
